--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.username=user
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=validate
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+
+jwt.secret=
+jwt.lifetime=
