--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,8 @@ spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=validate
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 
-jwt.secret=984hg493gh0439rthr0429uruj2309yh937gc763fe87t3f89723gf
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+
 jwt.lifetime=30m
